@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-02T16:19:20Z",
+  "timestamp" : "2022-07-03T16:19:26Z",
   "count_outdated" : 362,
   "uniques_outdated" : 148,
-  "count" : 477,
-  "uniques" : 157,
+  "count" : 480,
+  "uniques" : 158,
   "views" : [
     {
       "timestamp": "2022-06-19T00:00:00Z",
@@ -39,6 +39,13 @@
       "count_minmax": [ 1, 47 ],
       "uniques": 4,
       "uniques_minmax": [ 1, 4 ]
+    },
+    {
+      "timestamp": "2022-07-03T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
