@@ -1,5 +1,5 @@
 {
-  "count": 115,
+  "count": 118,
   "uniques": 7,
   "views": [
     {
@@ -26,6 +26,11 @@
       "timestamp": "2022-07-02T00:00:00Z",
       "count": 47,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-07-03T00:00:00Z",
+      "count": 3,
+      "uniques": 1
     }
   ]
 }
